<resources>
    <string name="app_name">Gaminimo programėlė</string>
    <string name="action_settings">Nustatymai</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="personal_recipes">Asmeniniai receptai</string>
    <string name="recipes_selection">Receptų pasirinkimas</string>
    <string name="recipe">Receptas</string>
    <string name="ingredients">Ingredientai</string>
    <string name="method">Gaminimo metodas</string>
    <string name="recipeName">Recepto pavadinimas</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_personal_recipe">Pridėti asmeninį receptą</string>
    <string name="submit">Išsaugoti</string>
    <string name="cancel">Atšaukti</string>
</resources>