<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RecipeListActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:padding="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/recipe_title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/recipeName"
                android:textSize="24sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/recipe_ingredients_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="18dp"
                android:textSize="18sp"
                android:text="@string/ingredients"
                />
            <TextView
                android:id="@+id/recipe_preparation_method_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/method"
                android:textSize="24sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/recipe_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="18dp"
                android:textSize="18sp"
                android:text="@string/recipe"
                />




        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>